--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "repository": "https://github.com/CityScope/CS_cityscopeJS",
   "license": "GPL3",
-  "homepage": "https://cityscope.media.mit.edu/CS_cityscopeJS",
+  "homepage": "https://cs-map.vlab.tech",
   "dependencies": {
     "@material-table/core": "^2.3.29",
     "@material-ui/core": "^4.11.3",
