--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-table/core": "^2.3.29",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@turf/turf": "^6.3.0",
     "axios": "^0.21.1",
     "deck.gl": "^8.4.11",
     "gh-pages": "^3.1.0",
