--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@turf/turf": "^6.3.0",
     "axios": "^0.21.1",
     "deck.gl": "^8.4.11",
+    "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "history": "^5.0.0",
+    "node-localstorage": "^2.1.6",
     "numeric": "^1.2.6",
     "proj4": "^2.7.2",
     "prop-types": "^15.7.2",
