--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/icons": "^4.11.2",
     "@turf/turf": "^6.3.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "deck.gl": "^8.4.11",
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
