update: set width for triplayer

--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -52,7 +52,7 @@
       },
       "TEXTUAL": {
         "displayName": "Toggle Information",
-        "showOnInit": true,
+        "showOnInit": false,
         "requireModule": "GEOGRID"
       },
       "SHADOWS": {
