--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
+    "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
     "react-map-gl": "^6.1.11",
     "react-redux": "^7.2.3",
