--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "history": "^5.0.0",
     "node-localstorage": "^2.1.6",
     "numeric": "^1.2.6",
+    "path": "^0.12.7",
     "proj4": "^2.7.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
