update: new API to get all on options

--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -32,7 +32,7 @@
       },
       "GEOJSON": {
         "displayName": "Geojson Layer",
-        "showOnInit": true,
+        "showOnInit": false,
         "requireModule": "geojson"
       },
       "AGGREGATED_TRIPS": {
@@ -64,7 +64,7 @@
     "toggles_mapchartmenu": {
       "GEOJSON": {
         "displayName": "Geojson Layer",
-        "showOnInit": true,
+        "showOnInit": false,
         "requireModule": "geojson"
       },
       "ABM": {
