allow to display tanthanh, rotate, check BE api

--- a/src/settings/settings.json
+++ b/src/settings/settings.json
@@ -32,7 +32,7 @@
       },
       "GEOJSON": {
         "displayName": "Geojson Layer",
-        "showOnInit": false,
+        "showOnInit": true,
         "requireModule": "geojson"
       },
       "AGGREGATED_TRIPS": {
